Fixed paragraphs and sections (flex, margin, gap ...)

--- a/style.css
+++ b/style.css
@@ -90,24 +90,40 @@ ul a:active {
 }
 
 .section-two{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    font-size: 28px;
+    font-weight: bolder;
+    color: #1F2937;
 }
 
 .container{
-    padding-bottom: 150px;
-    padding-top: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 150px;
+    margin-top: 100px;
 }
 
 .section-two-content{
     display: flex;
+    gap: 100px;
     justify-content: center;
-    gap: 52px;
+    margin-top: 40px;
+    flex-wrap: wrap;
+
+}
+
+.text{
+    max-width: fit-content;
 }
 
 .info{
-    max-width: 150px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    max-width: 450px;
 }
 .section-two-content img{
     border: solid #3882f6;
@@ -128,14 +144,14 @@ ul a:active {
     font-style: italic;
     flex-direction: column;
 }
-.section-three p {
+.quote {
     max-width: 800px;
 }
 
 
 .thor{
+    align-self: flex-end;
     font-weight: 900;
-    margin-left: auto;
 }
 
 .Section-four{
